--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>br.com.hugobrendow</groupId>
     <artifactId>starwars</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>starwars</name>
     <description>Projeto para compartilhar recursos entre rebeldes</description>
     <properties>
